--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-auth/node_modules
-container/node_modules
-dashboard/node_modules
-marketing/node_modules
+packages/auth/node_modules
+packages/container/node_modules
+packages/dashboard/node_modules
+packages/marketing/node_modules
 
-dist
+packages/dist
 .DS_Store
